Test application for testing scheduler

--- a/samples/bluetooth/mesh/chat/prj.conf
+++ b/samples/bluetooth/mesh/chat/prj.conf
@@ -1,18 +1,27 @@
 #
 # Copyright (c) 2020 Nordic Semiconductor ASA
 #
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
+# SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 #
 CONFIG_NCS_SAMPLES_DEFAULTS=y
 
 # General configuration
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_MAIN_STACK_SIZE=8096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8096
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
+CONFIG_FCB=y
 CONFIG_SETTINGS=y
 CONFIG_HWINFO=y
+CONFIG_LOG=y
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_DEFAULT_LEVEL=1
+CONFIG_SHELL_PRINTF_BUFF_SIZE=30
+CONFIG_SHELL_BACKEND_SERIAL_LOG_MESSAGE_QUEUE_SIZE=20
+
 CONFIG_DK_LIBRARY=y
+CONFIG_BT_MESH_DK_PROV=y
 
 # Bluetooth configuration
 CONFIG_BT=y
@@ -25,6 +34,11 @@ CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_OBSERVER=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_SETTINGS=y
+CONFIG_BT_MESH_STORE_TIMEOUT=1
+
+CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_MESH_DEBUG=y
+CONFIG_BT_MESH_DEBUG_MODEL=y
 
 # Disable unused Bluetooth features
 CONFIG_BT_CTLR_DUP_FILTER_LEN=0
@@ -35,22 +49,26 @@ CONFIG_BT_CTLR_CHAN_SEL_2=n
 CONFIG_BT_CTLR_MIN_USED_CHAN=n
 CONFIG_BT_CTLR_PRIVACY=n
 
+# Enable Shell module and use UART as a backend
+CONFIG_SHELL=y
+CONFIG_SHELL_BACKEND_SERIAL=y
+
 # Bluetooth Mesh configuration
 CONFIG_BT_MESH=y
 CONFIG_BT_MESH_RELAY=y
 CONFIG_BT_MESH_FRIEND=y
-CONFIG_BT_MESH_ADV_BUF_COUNT=13
+CONFIG_BT_MESH_ADV_BUF_COUNT=5
 CONFIG_BT_MESH_RX_SEG_MAX=10
 CONFIG_BT_MESH_TX_SEG_MAX=10
+CONFIG_BT_MESH_TX_SEG_MSG_COUNT=2
 CONFIG_BT_MESH_PB_GATT=y
 CONFIG_BT_MESH_GATT_PROXY=y
-CONFIG_BT_MESH_DK_PROV=y
 
-# Enable Bluetooth mesh models debug logs
-CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_MESH_DEBUG=y
-CONFIG_BT_MESH_DEBUG_MODEL=y
+CONFIG_BT_MESH_CFG_CLI=y
+CONFIG_BT_MESH_SCHEDULER_CLI=y
+CONFIG_BT_MESH_SCHEDULER_SRV=y
+CONFIG_BT_MESH_PONOFF_SRV=y
+CONFIG_BT_MESH_ONOFF_SRV=y
+CONFIG_BT_MESH_TIME_SRV=y
+CONFIG_BT_MESH_SCENE_SRV=y
 
-# Enable Shell module and use UART as a backend
-CONFIG_SHELL=y
-CONFIG_SHELL_BACKEND_SERIAL=y
